# Wanichusilk

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  Wanichusilk.cpp  Wanichusilk.h  define.h  vcpkg.json
abstractes/: description.cpp  description.h  item advenced.h  item.h  loader.cpp  loader.h  name.h  rawstring.h
buildCounter/: buildCounter.cpp  buildCounter.h
charity/: charity.cpp  charity.h
cmake/: IncludeModules.cmake  IncludePackageModules.cmake  IncludeVendorModules.cmake
docs/: COMPILE.md
hardware/: hardware.h
kernel/charity/: charity.cpp  charity.h
kernel/dialang/: dialang.cpp  dialang.h  methodes.cpp  token.h
kernel/hardware/: hardware.cpp  hardware.h  hardware1.cpp
kernel/item/: item.cpp  item.h
kernel/monochoice/: monochoice.cpp  monochoice.h
kernel/monolang/: flag.cpp  flag.h  method.cpp  monolang.cpp  monolang.h  token.h  variables.h
kernel/monolog/: monolog.cpp  monolog.h
kernel/task/: task.h
kernel/types of items/: list items.h
monolog/: monolog.cpp  monolog.h
resources/: charity.rctxt  dialang.das  item.rctxt  monolang.das  monolang.mns  monolang.rctxt  monolang1.mns  monolog.rctxt  task.rctxt
src/: Animation.cpp  Animation.h  AnimationManager.h  Application.cpp  Application.h  BigAnimation.cpp  BigAnimation.h  Clock.h  CopyPointer.h  Drawer.cpp  Drawer.h  EaseTracker.cpp  EaseTracker.h  FileBackground.h  FilmBackground.cpp  FilmBackground.h  FilmKeypoint.h  FilmLayerBase.h  FilmLayerTexture.cpp  FilmLayerTexture.h  FilmLayerist.cpp  FilmLayerist.h  FilmScene.cpp  FilmScene.h  Font.cpp  Font.h  FontManager.h  FrameScaling.h  IResourceManager.h  Image.cpp  Image.h  ImageManager.h  Interacter.cpp  Interacter.h  Keypoint.h  Keyroot.cpp  Keyroot.h  Loader.cpp  Loader.h  Locker.cpp  (+26 more)
src/examples/: ExampleFilmKeypoint2LayerSync.h  ExampleFilmKeypointBasic.h  ExampleFilmKeypointVariousMediatype.h
src/film/: FilmBackground.cpp  FilmBackground.h  FilmKeypoint.h  FilmKeypointBackground.h  FilmKeypointLayer.h  FilmKeypointLoaderView.h  FilmLayerAnimation.cpp  FilmLayerAnimation.h  FilmLayerBase.h  FilmLayerGroup.cpp  FilmLayerGroup.h  FilmLayerImage.cpp  FilmLayerImage.h  FilmLayerRect.cpp  FilmLayerRect.h  FilmLayerSprite.cpp  FilmLayerSprite.h  FilmLayerText.cpp  FilmLayerText.h  FilmLayerTexture.cpp  FilmLayerTexture.h  FilmLayerTileset.cpp  FilmLayerTileset.h  FilmLayerist.cpp  FilmLayerist.h  FilmLoaderView.cpp  FilmLoaderView.h  FilmScene.cpp  FilmScene.h
